# SimpleSwitchBrowser

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  env.sh
cmake/: VersionConfig.h.in  borealisLib.cmake  nx-utils.cmake
resources/: icon_corner.psd  icon_gui.psd
src/: CMakeLists.txt
src/Application/: CMakeLists.txt
src/Application/src/: SimpleSwitchBrowser.cxx
src/EntryHandler/: CMakeLists.txt
src/EntryHandler/include/: Dummy.h  EntryContainer.h  EntryFactory.h  File.h  Folder.h
src/EntryHandler/src/: Dummy.cpp  EntryContainer.cpp  EntryFactory.cpp  File.cpp  Folder.cpp
src/UI/: CMakeLists.txt
src/UI/include/: FrameMain.h  MainFrame.h  PopupLoadingBox.h  PopupLoadingView.h  TabBrowser.h
src/UI/src/: FrameMain.cpp  MainFrame.cpp  PopupLoadingBox.cpp  TabAbout.cpp  TabBrowser.cpp
